--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>TODO List</title>
+    <title>TODO 리스트</title>
   </head>
   <body>
     <div class="wrapper" style="display: flex">
